# BLUEJAY_WAAAVES

./: .gitignore  AGENTS.md  ARCHITECTURE_PLAN.md  BLOCK1_IMPLEMENTATION_GUIDE.md  BLOCK1_STATUS.md  BLOCK2_PLAN.md  BLOCK2_PROGRESS.md  BLOCK3_PLAN.md  BUILD_FLAGS.md  CHANGELOG.md  Cargo.toml  Future_Improvments_260228.md  Future_improvments.md  IPC_IMPLEMENTATION_GUIDE.md  IPC_VIDEO_DESIGN.md  LESSONS_LEARNED.md  Makefile  PACKAGING.md  PERFORMANCE_OPTIMIZATIONS.md  PREVIEW_INTEGRATION_GUIDE.md  PREVIEW_WINDOW_PLAN.md  Project.xcconfig  README.md  README_SHADER_UPDATE.md  REFACTORING_ROADMAP.md  SETUP.md  SIMPLE_ENGINE.md  addons.make  build.rs  config.make  fix_syphon.sh  layout.toml  openFrameworks-Info.plist  run.sh
dragonWaves_ac.xcodeproj/: project.pbxproj
dragonWaves_ac.xcodeproj/xcshareddata/xcschemes/: dragonWaves_ac Debug.xcscheme  dragonWaves_ac Release.xcscheme
icons/: README.md
layouts/: mix.toml
presets/Default/: TRi.json  TRii.json  astart.json  mess.json  ofStyle.json  shit.json  shittt.json  stress.json  workingBlk1.json  xfiii.json  xfiiii.json  xfiles.json  xfilsii.json
scripts/: build-release.sh  install_dependencies.sh  package-linux.sh  package-macos.sh  package-windows.sh
src/: GuiApp.cpp  GuiApp.h  ShaderLoader.cpp  ShaderLoader.h  main.cpp  main.rs  ofApp.cpp  ofApp.h  ofApp_original.cpp.bak  simple_main.rs
src/Audio/: AudioAnalyzer.cpp  AudioAnalyzer.h
src/Core/: PresetManager.cpp  PresetManager.h  SettingsManager.cpp  SettingsManager.h
src/Geometry/: GeometryRenderer.cpp  GeometryRenderer.h
src/Inputs/: InputManager.cpp  InputManager.h  InputSource.cpp  InputSource.h  NdiInput.cpp  NdiInput.h  SpoutInput.cpp  SpoutInput.h  VideoFileInput.cpp  VideoFileInput.h  WebcamInput.cpp  WebcamInput.h
src/Output/: OutputManager.cpp  OutputManager.h
src/Parameters/: Parameter.h  ParameterManager.cpp  ParameterManager.h
src/Preview/: ColorPicker.cpp  ColorPicker.h  PreviewPanel.cpp  PreviewPanel.h  PreviewRenderer.cpp  PreviewRenderer.h  PreviewWindow.cpp  PreviewWindow.h
src/ShaderPipeline/: Block1Shader.cpp  Block1Shader.h  Block2Shader.cpp  Block2Shader.h  Block3Shader.cpp  Block3Shader.h  PipelineManager.cpp  PipelineManager.h  ShaderBlock.cpp  ShaderBlock.h
src/Tempo/: TempoManager.cpp  TempoManager.h
src/VideoRecorder/: VideoRecorder.cpp  VideoRecorder.h
src/audio/: mod.rs
src/config/: layout.rs  mod.rs  resolution.rs
src/core/: lfo_engine.rs  mod.rs
src/engine/: imgui_renderer.rs  lfo_tempo.rs  mod.rs  preview.rs  preview_copy.wgsl  simple_engine.rs  simple_feedback.rs  texture.rs
src/engine/blocks/: block1.rs  block2.rs  block3.rs  mod.rs
src/engine/pipelines/: block1.rs  block2.rs  block3.rs  mod.rs
src/engine/stages/: mod.rs
src/gui/: mod.rs
src/input/: bgra_to_rgba.wgsl  mod.rs  ndi.rs  syphon_gpu_converter.rs  syphon_input.rs  texture_input.rs  webcam.rs
src/ipc/: mod.rs  spout.rs  syphon.rs  syphon_sys.rs  v4l2.rs
src/midi/: input.rs  learn.rs  mapping.rs  mod.rs
src/output/: mod.rs  ndi_async.rs  ndi_sender.rs  syphon_async.rs  syphon_fixed.rs  syphon_sender.rs
src/params/: mod.rs  of_preset_compat.rs  preset.rs
src/recorder/: mod.rs
src/utils/: mod.rs
