[package]
name = "rustjay_waaaves"
version = "0.1.0"
edition = "2021"
authors = ["VJ Developer"]
description = "High-performance VJ application in Rust with wgpu shaders"
license = "MIT"
repository = "https://github.com/yourusername/rustjay_waaaves"
keywords = ["vj", "visuals", "wgpu", "shaders", "real-time"]
categories = ["graphics", "multimedia"]

[dependencies]
# Windowing
winit = "0.30"

# Graphics - wgpu for cross-platform GPU acceleration
wgpu = { version = "25.0", features = ["spirv"] }
pollster = "0.3"  # For blocking on async operations

# Math and graphics
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.21", features = ["derive"] }

# Image and video processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Audio processing
cpal = "0.15"
rustfft = "6.2"
realfft = "3.4"

# Video input (optional - disable if libclang not available)
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and threading
tokio = { version = "1.42", features = ["rt-multi-thread", "sync"] }
crossbeam = "0.8"

# Logging and debugging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# OSC (Open Sound Control) for MIDI/controller integration
rosc = "0.11"

# MIDI input handling
midir = "0.10"

# Time and scheduling
instant = "0.1"

# GUI - imgui for wgpu
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["webcam"]
webcam = ["nokhwa"]

[profile.dev]
opt-level = 1
