[package]
name = "rustjay_waaaves"
version = "0.1.0"
edition = "2021"
authors = ["VJ Developer"]
description = "High-performance VJ application in Rust with wgpu shaders"
license = "MIT"
repository = "https://github.com/yourusername/rustjay_waaaves"
keywords = ["vj", "visuals", "wgpu", "shaders", "real-time"]
categories = ["graphics", "multimedia"]
build = "build.rs"

# Make this package its own workspace to avoid conflicts with parent
[workspace]

[dependencies]
# Windowing
winit = "0.30"

# Graphics - wgpu for cross-platform GPU acceleration
wgpu = { version = "25.0", features = ["spirv"] }
pollster = "0.3"  # For blocking on async operations

# Math and graphics
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.21", features = ["derive"] }

# Image and video processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Audio processing
cpal = "0.15"
rustfft = "6.2"
realfft = "3.4"

# Video input (optional - disable if libclang not available)
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and threading
tokio = { version = "1.42", features = ["rt-multi-thread", "sync"] }
crossbeam = "0.8"

# Logging and debugging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# OSC (Open Sound Control) for MIDI/controller integration
rosc = "0.11"

# MIDI input handling
midir = "0.10"

# NDI (Network Device Interface) for video input/output
grafton-ndi = { version = "0.11", optional = true }

# Time and scheduling
instant = "0.1"

# GUI - imgui for wgpu
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"

# Syphon crate (local path)
# Provides zero-copy GPU-to-GPU Syphon output for macOS
syphon-core = { path = "../crates/syphon/syphon-core", optional = true }
syphon-wgpu = { path = "../crates/syphon/syphon-wgpu", optional = true }



# Platform-specific IPC dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Metal for zero-copy texture sharing (used by syphon-wgpu)
metal = { version = "0.31", optional = true }
# Objective-C runtime for autoreleasepool
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# Spout uses Windows API
winapi = { version = "0.3", features = ["d3d11", "d3d12", "dxgi", "handleapi"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# V4L2 for video devices
v4l = { version = "0.14", optional = true }
nix = { version = "0.27", features = ["ioctl"], optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["webcam", "ipc", "ndi", "syphon"]
webcam = ["nokhwa"]
# NDI support (requires NDI runtime to be installed)
ndi = ["dep:grafton-ndi"]
# Syphon support (macOS only)
syphon = ["syphon-core", "syphon-wgpu"]
# Inter-process video sharing (platform-specific)
ipc = ["ipc-syphon", "ipc-spout", "ipc-v4l2"]
ipc-syphon = ["syphon-core", "syphon-wgpu", "metal"]
ipc-spout = ["winapi"]
ipc-v4l2 = ["v4l", "nix"]

[profile.dev]
opt-level = 1

# macOS App Bundle Configuration
# Install cargo-bundle: cargo install cargo-bundle
# Create bundle: cargo bundle --release
[package.metadata.bundle]
name = "RustJay Waaaves"
identifier = "com.rustjay.waaaves"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/icon.icns"]
version = "0.1.0"
# Embed the local Syphon framework into the app bundle
# This path is relative to the crate root (where Cargo.toml is)
resources = ["../crates/syphon/syphon-lib/Syphon.framework"]
copyright = "Copyright (c) 2024"
category = "Developer Tool"
short_description = "High-performance VJ application"
long_description = """
RustJay Waaaves is a high-performance VJ application built with Rust and wgpu.
Features real-time shader effects, video mixing, and Syphon output support.
"""
# macOS-specific settings
# Note: We embed Syphon via resources above, not via osx_frameworks
# This ensures the framework is bundled with the app
osx_minimum_system_version = "11.0"
# Codesigning (optional - for distribution)
#osx_signing_identity = "Developer ID Application: Your Name (TEAM_ID)"
# Notarization (optional - for distribution)
#osx_notarization_username = "your@email.com"
#osx_notarization_password = "@keychain:AC_PASSWORD"

# Windows-specific settings (for future Windows builds)
#[package.metadata.bundle.windows]
#icon = ["icons/icon.ico"]
